<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/darkColor"
        android:layout_height="match_parent"
        tools:context=".NoInternetActivity">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/no_internet"
              android:fontFamily="@font/open_sans_semibold"
              android:textSize="26sp"
              android:textColor="@color/C2C5DF"

              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@+id/textView" android:id="@+id/textView2"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/please_check_your_internet_connection_and_try_again"
              android:fontFamily="@font/open_sans"
              android:textSize="15sp"
              android:textColor="@color/X9B9EB5"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              android:id="@+id/textView"
              android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toTopOf="@id/retry_button"/>

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:src="@drawable/ic_no_internet"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
               android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/retry"
            android:drawableEnd="@drawable/ic_refresh_69"
            android:drawablePadding="10dp"
            android:textColor="@color/C2C5DF"
            android:background="#00000000"
            android:id="@+id/retry_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</android.support.constraint.ConstraintLayout>