<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/F5F5F8"
        tools:context=".fragments.SearchResultFragment">
    <android.support.v7.widget.Toolbar
            android:background="@color/darkColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:transitionName="@string/sharedTransitionName"
            android:id="@+id/toolbar">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">
            <EditText

                    android:layout_width="match_parent"
                    android:background="@drawable/ic_search_background"
                    android:hint="@string/search_twitter"
                    android:fontFamily="@font/open_sans"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_et"
                    android:maxLines="1"
                    android:focusableInTouchMode="true"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <ProgressBar android:layout_width="30dp" android:layout_height="30dp"
                         android:id="@+id/search_progress"
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="@+id/search_et" android:layout_marginEnd="16dp"
                         android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                         android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:textSize="14sp"
            android:textColor="@color/X333545"
            android:fontFamily="@font/open_sans_semibold"
            android:id="@+id/result_count_tv"/>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/result_count_tv"
            app:layout_constraintBottom_toTopOf="@+id/result_count_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:textOn="@string/sorted_by_popularity"
            android:textOff="@string/sort_by_popularity"
            android:drawableEnd="@drawable/ic_flame"
            android:drawablePadding="8dp"
            android:textAllCaps="false"
            android:fontFamily="@font/open_sans"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textSize="12sp"
            android:background="@drawable/ic_button_background"
            android:id="@+id/sort_button"/>

    <View android:layout_width="match_parent" android:layout_height="2dp"
          android:background="@color/C6C7D1"
          android:layout_marginTop="16dp"
          app:layout_constraintTop_toBottomOf="@+id/sort_button" app:layout_constraintStart_toStartOf="parent"
          android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
          android:id="@+id/divider_view"/>

    <android.support.v7.widget.RecyclerView android:layout_width="match_parent"
                                            android:layout_height="0dp"
                                            app:layout_constraintTop_toBottomOf="@+id/divider_view"
                                            app:layout_constraintStart_toStartOf="parent"
                                            android:layout_marginTop="8dp"
                                            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                                            app:layout_constraintEnd_toEndOf="parent"
                                            android:id="@+id/search_result_rv"
                                            app:layout_constraintBottom_toBottomOf="parent">


    </android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>