<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.HomeFragment"
        android:background="#F5F5F8"

>
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@mipmap/background"
            android:scaleType="centerCrop"

            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/constraintLayout"
            app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/logo"
                android:contentDescription="@string/des_logo"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="120dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/imageView"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                android:background="@drawable/ic_search_background"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/search_twitter"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="64dp"
                android:id="@+id/search_et"
                android:transitionName="@string/sharedTransitionName"
                android:fontFamily="@font/open_sans"/>

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/search_et"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:id="@+id/popular_topics_rv"
                app:layout_constraintBottom_toBottomOf="parent">

        </android.support.v7.widget.RecyclerView>

    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="273dp"
            android:orientation="horizontal"/>

    <ProgressBar android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:id="@+id/progress_circular"
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/guideline2"/>
</android.support.constraint.ConstraintLayout>